@@ -2,6 +2,6 @@ AUX gthumb-2.10.10-solaris.patch 861 RMD160 c59ef0e73dcacff13dc8bf3b82927e2b233b
 DIST gthumb-2.10.10.tar.bz2 2488828 RMD160 aec19b92c6880706beb35eb80dd328c16e2c5258 SHA1 226f8f413fbe31081f19efad85aee114281de6ec SHA256 4d9e4813699c9ff274a4e8a808f04f9347354bf3af668f90f35f79da9f3161af
 DIST gthumb-2.10.11.tar.bz2 2839510 RMD160 ceaef54c96cc6dbea23fe6c461d26b685b13778a SHA1 a9c133f3a652249329da8b5be8ff08dfec0ded9f SHA256 68ac6835afdbe32cba09504b4d61ad4f5d98a97776bfb58698338add56eb520e
 EBUILD gthumb-2.10.10.ebuild 1484 RMD160 d890d333e57047efc1f3293728b6d8c48c6bc0d4 SHA1 1a260ef389d9282e3678eb5de5c6174bb2aabc99 SHA256 c6bfe3617520cd6b4d8c2cdea0bcbf6ede8775e54d18c75ddcb22489847ebc18
-EBUILD gthumb-2.10.11.ebuild 1690 RMD160 cf1f2cfdab30328ad85433f9db2d1075adc124c0 SHA1 0d6188bb336bcca5f8027275cd2a0adcc5e45656 SHA256 5bb4c81a5e14bc18c9a5fd0804e91a1052ca79a9f724731a92f399412350bdeb
-MISC ChangeLog 14888 RMD160 f0a1caae74b3bbcb9192b6a8ffa955b828f8394d SHA1 f33a00f2be5514d9d23c88a1a074c9f546a4ac08 SHA256 fab8d6a78759360a4baf189698872e5431b6e2b1203e10f687699231cf6d8b3f
+EBUILD gthumb-2.10.11.ebuild 1643 RMD160 f2025bac9a7c9240fbba55cc3dbe34f114a2cd73 SHA1 18defc40c1d447c79a8b374e96e291fc7fd6c3a0 SHA256 972bb98456c5367e90c2e880591345b520e56d294fcae4a33a8b2b563c6cbdc5
+MISC ChangeLog 15066 RMD160 cafa0255bfa20de3f31a0870aff6a6540a3806d2 SHA1 7cd4a9f58f39884876fa3bd3aec2ecd61b5c1aca SHA256 300beab397b74cd18584afd46418eea338625365e822b9aafca07746dbac783c
 MISC metadata.xml 232 RMD160 26e89fd3270dde585d371f14bcfe45031eabd696 SHA1 c8d186f3747bc8c28d4bc7a510b7bb6376fa4fd4 SHA256 57e23fd4efe93011be4d05a43312eee1980b17b9e60239ad9e1d67cb45cfd900
